# cortex-claude

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/hooks/: post-tool-use.sh  session-start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: config.json  mcp-global.json  mcp-project.json
scripts/: benchmark.py  demo.py
src/cortex_claude/: __main__.py  daemon.py  setup.py
src/cortex_claude/capture/: __init__.py  filter.py
src/cortex_claude/clustering/: __init__.py  engine.py
src/cortex_claude/code/: __init__.py  extractor.py  facts.py
src/cortex_claude/core/: __init__.py  decay.py  engine.py  privacy.py  scope_manager.py  token_budget.py
src/cortex_claude/embeddings/: __init__.py  engine.py  tokenizer.py
src/cortex_claude/facts/: __init__.py  claude_extract.py  extractor.py  normalizer.py  patterns.py  spacy_extract.py  temporal.py
src/cortex_claude/models/: __init__.py  fact.py  memory.py  scope.py
src/cortex_claude/server/: app.py  config.py
src/cortex_claude/server/tools/: clusters.py  code.py  facts.py  forget.py  recall.py  save.py  scopes.py  status.py  traverse.py
src/cortex_claude/storage/: __init__.py  cluster_repo.py  database.py  fact_repo.py  memory_repo.py  migrations.py
src/cortex_claude/summarizer/: __init__.py  extractive.py  scoring.py
src/cortex_claude/web/: server.py  ui.py
src/cortex_claude/web/frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/cortex_claude/web/frontend/src/: App.tsx  index.css
src/cortex_claude/web/frontend/src/components/: DetailPanel.tsx  GraphView.tsx  Header.tsx  Sidebar.tsx
src/cortex_claude/web/frontend/src/lib/: api.ts
src/cortex_claude/web/static/: index.html
src/cortex_claude/web/static/assets/: index-B32-5uqv.js  index-BaMZShO7.css  index-BhQwUYiB.js  index-BiPLkRYh.css  index-Cg9ibm7y.js  index-D3JrjUST.js  index-HaPscQoY.css  index-LBo9d_3l.css
tests/: conftest.py
tests/integration/: test_confidence.py  test_fact_merging.py  test_forget_scopes_status.py  test_fts_and_decay.py  test_graph_traversal.py  test_privacy.py  test_progressive_recall.py  test_save_recall.py  test_storage.py
tests/unit/: test_capture_filter.py  test_claude_extract.py  test_clustering.py  test_code_extractor.py  test_code_facts.py  test_config.py  test_decay.py  test_facts.py  test_migration_v6.py  test_migration_v7.py  test_normalizer.py  test_patterns.py  test_privacy.py  test_scope_manager.py  test_summarizer.py  test_temporal.py  test_token_budget.py  test_tokenizer.py
