[project]
name = "cortex-claude"
version = "0.1.0"
description = "Local-first, token-efficient memory system for Claude Code via MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.6",
    "tiktoken>=0.7.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "spacy>=3.7.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.0",
]

[project.scripts]
cortex-claude = "cortex_claude.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex_claude"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
